# schafkopf-logic

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  shell.nix
.github/workflows/: ci.yml  release.yml
src/: lib.rs
src/deck/: card.rs  mod.rs  rank.rs  suit.rs
src/gamemode/: mod.rs  tests.rs
src/player/: mod.rs
